# ESP32_IDF5_Sample

./: CMakeLists.txt  LICENSE  README.md  partitions_16MB.csv  platformio.ini
components/esp_moduleunit/: CMakeLists.txt  Kconfig  esp_moduleunit.h
components/esp_moduleunit/bmp280/: bmp280.c  bmp280.h
components/esp_moduleunit/button/: button.c  button.h
components/esp_moduleunit/buzzer/: buzzer.c  buzzer.h
components/esp_moduleunit/common/: esp_unit_common.h
components/esp_moduleunit/i2c_bus/: i2c_device.c
components/esp_moduleunit/i2c_ssd1306/: i2c_ssd1306.c  i2c_ssd1306.h
components/esp_moduleunit/led/: led.c  led.h
components/esp_moduleunit/pcf8563/: pcf8563.c  pcf8563.h
components/esp_moduleunit/qmp6988/: qmp6988.c  qmp6988.h
components/esp_moduleunit/rx8900/: rx8900.c  rx8900.h
components/esp_moduleunit/sht3x/: sht3x.c  sht3x.h
components/esp_moduleunit/sk6812/: sk6812.c  sk6812.h
components/esp_moduleunit/st7032/: st7032.c  st7032.h
components/esp_moduleunit/tm1637/: tm1637.c  tm1637.h
components/esp_moduleunit/wifi/: wifi.c  wifi.h
main/: CMakeLists.txt  led_strip_encoder.c  main.c
ulp/: main.c
